Fix mobile styling issues and enhance guestbook functionality (#10)
* Initial plan

* Fix network fetch error in Header component with fallback values


* Fix mobile styling issues: remove large left margin on centered pages and prevent horizontal scroll in imgGallery


* Fix mobile z-index issue: ensure navbar appears above footer on mobile


* fix header bugs

* remove package-lock

* Fix guestbook styling and add website link functionality


* fix guestbook

---------

--- a/src/components/interactive/Guestbook.scss
+++ b/src/components/interactive/Guestbook.scss
@@ -55,16 +55,27 @@
   }
 
   .guestbookEntrySignoff {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     justify-content: space-between;
     align-items: center;
     gap: 1em;
     margin-top: 0.4em;
 
     .guestbookEntryTimestamp {
-      text-align: right;
+      text-align: left;
+      margin-top: auto;
       line-height: 1;
       font-size: 70%;
+    }
+
+    .guestbookEntryName {
+      line-height: 1;
+      text-align: right;
+
+      a {
+        line-height: 1;
+      }
     }
   }
 }
